# provekit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  _typos.toml  complete_age_check.wpkv  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  circuit_keys.yml  claude-code-review.yml  claude.yml  end-to-end.yml  prepare-claude-review.yml
docs/: analyze_flamegraph.py  documentation.md  final_final_document.md  final_report.md  generate_charts.py  interview.md  numbers.md  prompts.md  report.md
noir-examples/babyjubjub/src/: escalar_mul_fix.nr  lib.nr
noir-examples/embedded_curve_msm/: Prover.toml
noir-examples/embedded_curve_msm/src/: main.nr
noir-examples/many_poseidons/: Prover.toml
noir-examples/many_poseidons/src/: main.nr
noir-examples/native_msm/: Nargo.toml
noir-examples/native_msm/src/: main.nr
noir-examples/noir-passport-examples/merkle_age_check/: README.md
noir-examples/noir-passport-examples/merkle_age_check/t_add_dsc_hash_1300/: Nargo.toml
noir-examples/noir-passport-examples/merkle_age_check/t_add_dsc_verify_1300/: Nargo.toml
noir-examples/noir-passport/fragmented/merkle_age_check/: README.md
noir-examples/noir-passport/merkle_age_check/t_add_dsc_verify_1300/: Nargo.toml
noir-examples/noir-r1cs-test-programs/bin-opcode-i16/: Prover.toml
noir-examples/noir-r1cs-test-programs/bin-opcode-i32/: Prover.toml
noir-examples/noir-r1cs-test-programs/bin-opcode-i64/: Prover.toml
noir-examples/noir-r1cs-test-programs/bin-opcode-i8/: Prover.toml
noir-examples/noir-r1cs-test-programs/bin-opcode-u128/src/: main.nr
noir-examples/noir-r1cs-test-programs/bin-opcode-u64/src/: main.nr
noir-examples/noir_sha256/src/: main.nr
noir-examples/partial_sha256/: Nargo.toml
noir-examples/poseidon-rounds/: Prover.toml
noir-examples/poseidon-rounds/src/: main.nr
ntt/benches/: ntt_engine.rs
ntt/src/: lib.rs  main.rs  ntt.rs
playground/cm31_ntt/src/: ntt.rs  ntt_utils.rs  rm31.rs
playground/passport-input-gen/: Cargo.toml  README.md
playground/passport-input-gen/src/: commitment.rs  lib.rs  mock_generator.rs  partial_sha256.rs  poseidon2.rs
playground/passport-input-gen/src/parser/: binary.rs  types.rs  utils.rs
playground/sage/fri-and-friends/: whir.ipynb
playground/sage/fri-and-friends/src/: fri.py  whir.py
playground/wasm-demo/: .gitignore  README.md  index.html  ntt-bench.html  package.json  verify-speedup.mjs
playground/wasm-demo/noir-web/: noir-init.mjs
playground/wasm-demo/scripts/: serve.mjs  setup.mjs
playground/wasm-demo/src/: demo-web.mjs  demo.mjs  prove-worker.mjs  toml-parser.mjs  wasm-loader.mjs  webgpu-ntt-bridge.mjs  webgpu-ntt.mjs
playground/wasm-demo/src/shaders/: bn254_field.wgsl  ntt_butterfly.wgsl
poseidon2/: Cargo.toml
poseidon2/src/: constants.rs  hash.rs  lib.rs  permutation.rs
provekit/common/: Cargo.toml
provekit/common/benches/: rs_bench.rs
provekit/common/proptest-regressions/: ntt.txt
provekit/common/src/: binary_format.rs  lib.rs  mavros.rs  noir_proof_scheme.rs  ntt.rs  optimize.rs  prefix_covector.rs  prover.rs  r1cs.rs  sparse_matrix.rs  transcript_sponge.rs  u256_arith.rs  verifier.rs  whir_r1cs.rs
provekit/common/src/file/: bin.rs  binary_format.rs  io.rs  json.rs  mod.rs
provekit/common/src/file/io/: bin.rs  mod.rs
provekit/common/src/skyscraper/: mod.rs  pow.rs  sponge.rs  whir.rs
provekit/common/src/utils/: mod.rs  serde_hex.rs  sumcheck.rs  zk_utils.rs
provekit/common/src/witness/: binops.rs  limbs.rs  mod.rs  witness_builder.rs
provekit/common/src/witness/scheduling/: dependency.rs  remapper.rs  scheduler.rs
provekit/prover/: Cargo.toml
provekit/prover/src/: bigint_mod.rs  ec_arith.rs  input_utils.rs  lib.rs  r1cs.rs  whir_r1cs.rs
provekit/prover/src/witness/: bigint_mod.rs  limb_io.rs  mod.rs  ram.rs  witness_builder.rs
provekit/r1cs-compiler/: Cargo.toml
provekit/r1cs-compiler/src/: binops.rs  constraint_helpers.rs  digits.rs  lib.rs  noir_proof_scheme.rs  noir_to_r1cs.rs  ntt.rs  poseidon2.rs  range_check.rs  sha256_compression.rs  spread.rs  whir_r1cs.rs
provekit/r1cs-compiler/src/memory/: ram.rs  rom.rs
provekit/r1cs-compiler/src/msm/: cost_model.rs  curve.rs  ec_ops.rs  ec_points.rs  limbs.rs  mod.rs  multi_limb_arith.rs  native.rs  (+7 more)
provekit/verifier/: Cargo.toml
provekit/verifier/src/: lib.rs  whir_r1cs.rs
recursive-verifier/app/circuit/: circuit.go  circuit_test.go  matrix_evaluation.go  mtUtilities.go  public_weight_bench_test.go  types.go  whir.go  whir_utilities.go
scripts/: run_all.sh  verify_offset_points.py
skyscraper/block-multiplier/: Cargo.toml
skyscraper/block-multiplier/benches/: bench.rs
skyscraper/block-multiplier/src/: block_simd.rs  constants_wasm.rs  lib.rs  portable_simd.rs  portable_simd_rne.rs  portable_simd_rtz.rs  portable_simd_wasm.rs  simd_rne_utils.rs  simd_rtz_utils.rs  simd_utils_wasm.rs
skyscraper/bn254-multiplier/: Cargo.toml  gen_multiples.py  sub_reduce.py
skyscraper/bn254-multiplier/benches/: bench.rs
skyscraper/bn254-multiplier/examples/: count.rs
skyscraper/bn254-multiplier/src/: constants.rs  lib.rs  utils.rs
skyscraper/core/: Cargo.toml
skyscraper/core/src/: lib.rs  pow.rs  reduce.rs
skyscraper/fp-rounding/src/: lib.rs
skyscraper/hla/: Cargo.toml
skyscraper/hla/src/: rust_simd_codegen.rs
tooling/cli/: Cargo.toml
tooling/cli/src/: main.rs  profiling_alloc.rs
tooling/provekit-bench/: Cargo.toml
tooling/provekit-bench/benches/: bench.rs
tooling/provekit-bench/tests/: compiler.rs  msm_witness_solving.rs
tooling/provekit-ffi/: Cargo.toml  README.md  TEST_PLAN.md
tooling/provekit-ffi/include/: provekit_ffi.h
tooling/provekit-ffi/src/: ffi.rs  ffi_allocator.rs  lib.rs  mmap_allocator.rs  types.rs  utils.rs
tooling/provekit-gnark/: Cargo.toml
tooling/provekit-gnark/src/: gnark_config.rs
tooling/provekit-wasm/: Cargo.toml  README.md  build-wasm.sh  rust-toolchain.toml
tooling/provekit-wasm/src/: format.rs  gpu_ntt.rs  lib.rs  prover.rs  verifier.rs
tooling/verifier-server/: docker-compose.yml
tooling/verifier-server/src/: main.rs
(+54 files in other folders)
