[package]
name = "provekit-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["parallel"]
parallel = []

[dependencies]
# Workspace crates
ntt.workspace = true
skyscraper.workspace = true

# Noir language
acir.workspace = true
noirc_abi.workspace = true

# Cryptography and proof systems
ark-bn254.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
spongefish.workspace = true
spongefish-pow.workspace = true
whir.workspace = true

# 3rd party
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
hex.workspace = true
itertools.workspace = true
postcard.workspace = true
rayon.workspace = true
ruint.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zerocopy.workspace = true

# Target-specific dependencies: only on non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd.workspace = true
mavros-vm.workspace = true
mavros-artifacts.workspace = true
xz2.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
