[package]
name = "provekit-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
# Workspace crates
provekit-common.workspace = true
provekit-prover = { workspace = true, features = ["witness-generation", "parallel"] }
provekit-r1cs-compiler = { workspace = true }
provekit-verifier = { workspace = true }

# 3rd party
anyhow.workspace = true
noirc_abi.workspace = true
parking_lot.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
