[package]
name = "provekit-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace crates - enable parallel features with wasm-bindgen-rayon
provekit-common.workspace = true
provekit-prover = { workspace = true, default-features = false, features = ["parallel"] }
provekit-verifier.workspace = true

# Noir language
acir.workspace = true
noirc_abi.workspace = true  # Required for serde support of Abi type in get_circuit()

# 3rd party
anyhow.workspace = true
base64.workspace = true
console_error_panic_hook.workspace = true
getrandom.workspace = true   # Enable js feature for WASM via feature unification (v0.2)
getrandom03.workspace = true  # Enable wasm_js feature for WASM via feature unification (v0.3)
hex.workspace = true
lzma-rs = "0.3"  # Pure-Rust XZ decompressor (native crate xz2 uses C bindings, incompatible with WASM)
postcard.workspace = true
ruzstd = "0.8"  # Pure-Rust Zstd decompressor (native crate zstd uses C bindings, incompatible with WASM)
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true

# WASM parallelism via Web Workers
wasm-bindgen-rayon = "1.2"
rayon.workspace = true

[lints]
workspace = true
